<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#3F51B5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:text="@string/back_to_main"
            android:id="@+id/back_to_main"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/add_type_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:gravity="center_vertical"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/add_spinner"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/add_name_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/textView3"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            android:ems="10"
            android:id="@+id/add_dish_name"
            android:layout_weight="4" />
    </LinearLayout>

    <Button
        android:text="@string/save_new_dish"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_btn" />

</LinearLayout>